Enhance attendance management: add bulk update for student attendance records, include attendance statistics, and improve filtering by enrollment history